Add functions to read the table from a csv or html
Add internal functions to read a table from csv or from html, plus
a function to clean up the tables that were read in so they are
easier to work with. Add required packages to the Imports field and
to the packrat lock file.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,6 +7,17 @@ Authors@R:
            role = c("aut", "cre"),
            email = "amstilp@uw.edu")
 Description: Parse the TOPMed contact table, in csv format or from the html code.
+Imports: 
+  dplyr,
+  readr,
+  rvest,
+  stringr,
+  tibble,
+  tidyr,
+  xml2
+Suggests:
+  roxygen2
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 6.1.1
