Start using testthat for testing
Add testthat to the DESCRIPTION file Suggests field, and add the
required subdirectory for tests.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,8 @@ Imports:
   tidyr,
   xml2
 Suggests:
-  roxygen2
+    roxygen2,
+    testthat
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
