Add tests for reformatting function
Add tests for the function to reformat a parsed contact table.
Update the function where these tests uncovered issues. In
particular, make the following changes:
- return columns in a specific order
- order the output approrpriately
- check for duplicate study/project combinations

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,6 +10,7 @@ Description: Parse the TOPMed contact table, in csv format or from the html code
 Imports: 
   dplyr,
   readr,
+  rlang,
   rvest,
   stringr,
   tibble,
