Automatically run code coverage in travis
Add required files to check test coverage in travis using covr, and
update the travis yaml file to automatically run this check. Add a
badge to the README file and re-render it.

Note: these updates were made automatically by running usethis::use_coverage().

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,7 +20,8 @@ Suggests:
     charlatan,
     roxygen2,
     rmarkdown,
-    testthat
+    testthat,
+    covr
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
